fixed sizing issues on mobile screens

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,6 +13,10 @@
 }
 
 @media screen and (max-width: 572px) {
+  .footer {
+    margin-top: 48px;
+    margin-bottom: 36px;
+  }
   .footer__copyright {
     font-size: 14px;
     line-height: 1.2;
