--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,8 @@
 .profile {
   display: flex;
   align-items: center;
-  padding-top: 40px;
+  margin-top: 40px;
+  margin-bottom: 51px;
 }
 
 .profile__photo {
@@ -95,12 +96,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    max-width: 282px;
   }
 
   .profile__name {
     font-size: 22px;
     line-height: 1.2;
+    max-width: 196px;
   }
 
   .profile__edit-button {
@@ -109,7 +111,6 @@
   }
 
   .profile__description {
-    margin-bottom: 36px;
     width: 100%;
     text-align: center;
     font-size: 14px;
